[package]
name = "surgery"
description = "cut-off parts of text streams"
version = "0.1.0"
authors = ["Vince van Oosten <techhazard@codeforyouand.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "surgery"
path = "src/lib.rs"

[[bin]]
name = "amp"
description = "Skip the last N lines of files/stdin (inverse of tail)"
path = "src/bin/amp.rs"

[[bin]]
name = "dcap"
description = "Skip the first N lines of files/stdin (inverse of head)"
path = "src/bin/dcap.rs"

[[bin]]
name = "head"
description = "Print the first N lines of files/stdin (Simple implemetation of head from coreutils)"
path = "src/bin/head.rs"

[[bin]]
name = "tail"
description = "Print the last N lines of files/stdin (Simple implemetation of tail from coreutils)"
path = "src/bin/tail.rs"

[dependencies]
clap = "2.33.0"
